# tea-lang

./: .gitignore  .travis.yml  CONTRIBUTING.md  CREDIT.MD  Makefile  Pipfile  README.md  SOURCES.md  Tea for UIST 2019.ipynb  documentation.md  errors.py  hypotheses.py  lang.py  lang_imp_0.py  lang_spec_0.py  motivation_paper_analysis.R  output.json  pyproject.toml  setup.py  tea.py  tea_demo.ipynb  tea_demo_df.ipynb  tea_parse.py  test.md
.github/workflows/: ci.yml
Analysis_Outputs/Statsmodel/: test_statsmodel_eval.py
classes/: tea.py
data/: motivation2.csv
datasets/: README.MD  UScrime.csv  motivation_paper_dataset.csv
evals/: test_eval.py
evaluation/: evaluation.R
examples/: 01_ar_vs_tv.py  01_ar_vs_tv_output.txt  02_indep_t_test.py  02_indep_t_test_output.txt  03_less_than.py  03_less_than_output.txt  04_wilcoxon.py  04_wilcoxon_output.txt  05_paired_t_test.py  05_paired_t_test_output.txt  06_multiple_comparisons.py  06_multiple_comparisons_output.txt  07_positive_relationship.py  07_positive_relationship_output.txt  08_negative_relationship.py  08_negative_relationship_output.txt  09_no_prediction.py  09_no_prediction_output.txt  10_pointbiserial.py  10_pointbiserial_output.txt  11_spearman.py  11_spearman_output.txt  EXAMPLES.MD  longify.py  structured_hypotheses.py
examples/AR_TV/: ar_tv.csv  ar_tv_tea.py  ar_tv_tea_new_syntax.py
examples/Co2/: co2.csv  co2_tea.py  co2_tea_new_syntax.py
examples/Drugs/: drug.csv  drug_small_tea.py  drugs_small_new_syntax.py
examples/Olympics/: olympics_tea.py  olympics_tea_new_syntax.py
new_datasets/: mini_test.csv  test.csv
python/: analysis_py.py  ideate.py
python/tea/: __init__.py  (+10 more)
r/: motivation_paper_analysis.R
reason/: package-lock.json  package.json
statistical_tests/: PearsonCorrelation.py  StatisticalTest.py
tea/: Untitled-1  __init__.py  api.py  ast.py  build.py  dataset.py  evaluate.py  evaluate_data_structures.py  evaluate_helper_methods.py  evaluate_result_data_structures.py  global_vals.py  hypotheses.py  hypothesis.py  solver.py  tea_ast.py  tea_dsl.py  tea_eval.py  tea_grammar.lark  vardata_factory.py  variable.py
tea-lang/: README.md
tests/: test_api.py  test_build.py  test_evaluate.py  test_hypotheses.py  test_input_data.py  test_integration.py  test_mann_whitney_exact.py  test_resultData.py  test_tea.py  test_vardata_factory.py  test_wilcoxon_signed_rank.py
(+93 files in other folders)
