[tool.poetry]
name = "tealang"
version = "0.4.2"
description = "Tea: A High-level Language and Runtime System to Automate Statistical Analysis"
readme = "README.md"
authors = ["Eunice Jun <eunice.m.jun@gmail.com>"]
license = "Apache 2.0"
packages = [
    {include = "tea"}
]

[tool.poetry.dependencies]
python = ">=3.7.11, <3.11"
attrs = "21.4.0"
pandas = "1.3.5"
scipy = "1.7.3"
scikit-learn = "1.0.2"
statsmodels = "^0.12.2"
bootstrapped = "0.0.2"
requests = "2.27.1"
z3-solver = "4.8.14.0"
urllib3 = "1.26.8"
parameterized = "0.8.1"
sympy = "1.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
parameterized = "^0.8.1"
pytest-cov = "^3.0.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
