[tool.poetry]
name = "tealang"
version = "0.4.2"
description = "Tea: A High-level Language and Runtime System to Automate Statistical Analysis"
readme = "README.md"
authors = ["Eunice Jun <eunice.m.jun@gmail.com>"]
license = "Apache 2.0"
packages = [
    {include = "tea"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
attrs = "^24.2.0"
pandas = "^2.2.0"
scipy = "^1.14.0"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.0"
bootstrapped = "^0.0.2"
requests = "^2.32.0"
z3-solver = "^4.13.0"
urllib3 = "^2.2.0"
parameterized = "^0.9.0"
sympy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
parameterized = "^0.9.0"
pytest-cov = "^6.0.0"
coveralls = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
