[tool.poetry]
name = "tealang"
version = "0.5.0"
description = "Tea: A High-level Language and Runtime System to Automate Statistical Analysis"
readme = "README.md"
authors = ["Eunice Jun"]
license = "Apache 2.0"
packages = [
    {include = "tea"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
attrs = ">=23.1"
pandas = ">=2.0"
scipy = ">=1.11"
scikit-learn = ">=1.3"
statsmodels = ">=0.14"
bootstrapped = ">=0.0.2"
requests = ">=2.31"
z3-solver = ">=4.12"
parameterized = ">=0.9"
sympy = ">=1.12"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
parameterized = ">=0.9"
pytest-cov = ">=4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
